--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 </h3>
                 <div class="email__form__container">
                     <div class="form__container">
-                        <input type="email" class="email__input" placeholder=" " />
+                        <input type="email"/>
                         <label class="email__label">Email Address</label>
                     </div>
                     <button class="primary__button">
